[metadata]
name = arestor
version = 0.1.0
summary = Portable mocked metadata services
description-file =
    README.md
author = Cloudbase Solutions Srl
author-email = acoman@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    arestor

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    cloudbase-init = cloudbaseinit.shell:main
